--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Relationship Questionnaire</title>
+  <title>Valentine's Day Relationship Quiz</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div id="container">
-    <h1>Relationship Affinity Quiz</h1>
+    <h1>💖 Relationship Affinity Quiz 💖</h1>
     <form id="quiz-form">
       <label for="partner-name">Enter the name of your relationship partner:</label>
       <input type="text" id="partner-name" name="partner-name" required>
